Fix responsive alignment of logo in top bar

--- a/src/components/page-layout/layout.css
+++ b/src/components/page-layout/layout.css
@@ -16,7 +16,7 @@
 .layout__mobile-overlay {
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: rgba(0, 57, 117, 0.1);
   opacity: 0.5;
 }
 
@@ -27,7 +27,6 @@
 .layout__container {
   width: 100%;
   display: flex;
-  /* margin: auto; */
 }
 
 .layout__main {
